@@ -12,6 +12,8 @@ include::include.adoc[]
 - `AbstractAnnotationDrivenExtension` is now deprecated and its logic was moved to `default` methods of
   `IAnnotationDrivenExtension` which should be implemented directly now instead of extending the abstract class.
 
+- `@ConfineMetaClassChanges` is now repeatable
+
 
 == 2.0-M3 (2020-06-11)
 
